Corrected color: color:

--- a/swegon-casa-mockup-card.html
+++ b/swegon-casa-mockup-card.html
@@ -63,7 +63,7 @@
         }
 
         .warning {
-            color: color: #d80707db;
+            color: #d80707db;
         }
 
         .icon {
