--- a/swegon-casa-mockup-card.html
+++ b/swegon-casa-mockup-card.html
@@ -5,7 +5,6 @@
     <style>
         .container {
             font-family: sans-serif;
-            border: dotted;
         }
 
         .bg {
@@ -23,9 +22,7 @@
         .col-center {
             font-size: xxx-large;
             font-weight: bold;
-            border: double;
             max-width: 100%;
-            margin: auto;
             margin: 0 auto;
             width: 100px;
         }
@@ -80,7 +77,6 @@
             max-width: 60px;
             height: 60px;
             position: static;
-            bottom: 0;
         }
 
         .label {
@@ -91,11 +87,8 @@
         }
 
         .large_label {
-            font-size: xxx-large;
-            font-weight: bold;
             position: static;
             padding-left: 0.2em;
-            bottom: 0;
         }
 
         .right {
@@ -115,7 +108,7 @@
 
         .entity {
             width: 270px;
-            height: 80px;
+            height: 60px;
             vertical-align: bottom;
             position: relative;
             margin: auto;
@@ -184,7 +177,7 @@
                         </g>
                     </g>
                 </g>
-                <g transform="translate(285,0)">
+                <g class="col-center" transform="translate(285,20)">
                     <foreignObject class="entity">
                         <div class="large_icon left">
                             <svg>
